2005-04-19  Roland Illig  <roland.illig@gmx.de>

	* view.c (view_file_load_data): Removed the requirement for
	ds_file_datasize to be a power of two.

2005-04-18  Roland Illig  <roland.illig@gmx.de>

	* view.c (struct WView): Moved the growing buffer variables
	between the data source and the display section.
	* view.c (save_edit_changes): Renamed to
	view_hexedit_save_changes().

2005-04-17  Roland Illig  <roland.illig@gmx.de>

	* view.c (save_edit_changes): Completely rewritten to be robust
	on errors. All changed bytes that could not be saved are kept
	in the change list, so that the user can try to save them later.
	* view.c (view_set_byte): Added for save_edit_changes().
	* view.c (display): view_place_cursor() is called after displaying
	in hex mode.
	* view.c (save_edit_changes): Changed return type to gboolean.
	* view.c (view_ok_to_quit): Changed return type to gboolean.
	Adjusted returned values.
	* view.c (view_load): Changed return type to gboolean. Adjusted
	returned values.
	* view.c (view): Rewrote the code a little bit.
	* view.h (view): Rewrote the comment.
	* view.c: Eliminated some ?: operators.
	* view.c: Corrected some typos and indentation.
	* view.c: Added four functions view_get_top(), view_get_left(),
	view_get_bottom(), view_get_right() to mark the bounds of the
	rectangle that can be used for displaying data. Expressed
	view_get_datalines() and view_get_datacolumns() in terms of
	these four functions.
	* view.c (display): Simplified the ruler drawing code.
	* view.c (display): Renamed width and height to right and bottom.
	The values of the variables aren't really the width and height
	of anything.
	* view.c (display): Renamed frame_shift to left or top, whatever
	is more appropriate.
	* view.c (view_set_datasource_string): Removed call to
	view_close_datasource() for consistency with the other
	view_set_datasource_*() functions. Adjusted the callers.

2005-04-16  Roland Illig  <roland.illig@gmx.de>
