@@ -2,6 +2,8 @@
 
 	* view.c (view_file_load_data): Removed the requirement for
 	ds_file_datasize to be a power of two.
+	* view.c (struct WView): Renamed nib_shift to hexedit_lownibble.
+	Replaced 0 literals with FALSE.
 
 2005-04-18  Roland Illig  <roland.illig@gmx.de>
 
